css/front-flex.less
@import "mixins";

.panel-grid {

	&.panel-no-style,
	&.panel-has-style > .panel-row-style{
		display: -webkit-flex;
		display: flex;

		-ms-flex-wrap: wrap;
		-webkit-flex-wrap: wrap;
		flex-wrap: nowrap;

		-ms-justify-content: space-between;
		-webkit-justify-content: space-between;
		justify-content: space-between;

	}

	.so-parallax {
		position: relative;

		& > *:not(.simpleParallax) {
			position: relative;
			z-index: 1;
		}

		.simpleParallax {
 			overflow: hidden;
		}

		.simpleParallax,
		img[data-siteorigin-parallax] {
			bottom: 0;
			left: 0;
			position: absolute;
			right: 0;
			top: 0;
			width: 100%;
			z-index: 0;
		}
	}
}

.panel-background-overlay {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}

// Prevent content appearing behind the overlay.
.panel-has-overlay {
	&,
	.panel-grid-cell {
		position: relative;
	}

	&.so-panel {
		z-index: 1;

		.panel-widget-style > * {
			position: relative;
		}

		.panel-background-overlay {
			position: absolute;
		}
	}
}

.panel-layout.panel-is-rtl {
	.panel-grid {
		&.panel-no-style,
		&.panel-has-style > .panel-row-style {
			-ms-flex-direction: row-reverse;
			-webkit-flex-direction: row-reverse;
			flex-direction: row-reverse;
		}
	}
}

.panel-grid-cell {

	.box-sizing( border-box );

	.panel-cell-style {
		height: 100%;
	}

	.so-panel {
		.clearfix();
	}

	.panel-last-child {
		margin-bottom: 0;
	}

	.widget-title {
		margin-top: 0;
	}
}

body.siteorigin-panels-before-js:not(.siteorigin-panels-css-container) {
	overflow-x: hidden;

	.siteorigin-panels-stretch {
		margin-right: -1000px !important;
		margin-left: -1000px !important;
		padding-right: 1000px !important;
		padding-left: 1000px !important;
	}
}

